--- a/course.html
+++ b/course.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-    <section class="header">
+    <section class="sub-header">
       <nav>
         <a href="index.html"><img src="images/logo.png" alt="" /></a>
         <div class="nav-links" id="navLinks">
@@ -34,20 +34,10 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-
-      <div class="text-box">
-        <h1>India's Biggest University</h1>
-        <p>
-          VIT was established with the aim of providing quality higher education
-          on par with international standards. It persistently seeks and adopts
-          innovative methods to improve the quality of higher education on a
-          consistent basis.
-        </p>
-        <a href="" class="hero-btn">Visit Us To Know More</a>
-      </div>
+      <h1>Our Courses</h1>
     </section>
 
-    <!-- Course -->
+    <!-- Courses -->
     <section class="course">
       <h1>Courses We Offer</h1>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -78,33 +68,6 @@
             molestias dolorem nobis nostrum animi nihil dolor sint itaque
             obcaecati tempora! Ducimus, at.
           </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Campus -->
-    <section class="campus">
-      <h1>Our Global Campus</h1>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-
-      <div class="row">
-        <div class="campus-col">
-          <img src="images/london.png" alt="" />
-          <div class="layer">
-            <h3>Chennai</h3>
-          </div>
-        </div>
-        <div class="campus-col">
-          <img src="images/washington.png" alt="" />
-          <div class="layer">
-            <h3>Vellore</h3>
-          </div>
-        </div>
-        <div class="campus-col">
-          <img src="images/newyork.png" alt="" />
-          <div class="layer">
-            <h3>Bhopal</h3>
-          </div>
         </div>
       </div>
     </section>
@@ -142,69 +105,22 @@
       </div>
     </section>
 
-    <!-- testimonials -->
-
-    <section class="testimonials">
-      <h1>What are Student Says</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
-
-      <div class="row">
-        <div class="testimonial-col">
-          <img src="images/user1.jpg" alt="" />
-          <div>
-            <p>
-              Lorem,ipsum dolor sit amet consectetur adipisicing elit. Ratione
-              id tempora laboriosam voluptas alias autem. Nisi qui nostrum
-              accusantium harum sunt, ea voluptas distinctio. Voluptate
-              assumenda dolor sequi aspernatur ab?
-            </p>
-            <h3>Wolverine</h3>
-            <i class="fa fa-star" ></i>
-            <i class="fa fa-star" ></i>
-            <i class="fa fa-star" ></i>
-            <i class="fa fa-star" ></i>
-            <i class="fa fa-star-o" ></i>
-
-          </div>
-        </div>
-        <div class="testimonial-col">
-          <img src="images/user2.jpg" alt="" />
-          <div>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione
-              id tempora laboriosam voluptas alias autem. Nisi qui nostrum
-              accusantium harum sunt, ea voluptas distinctio. Voluptate
-              assumenda dolor sequi aspernatur ab?
-            </p>
-            <h3>Leo</h3>
-            <i class="fa fa-star" ></i>
-            <i class="fa fa-star" ></i>
-            <i class="fa fa-star" ></i>
-            <i class="fa fa-star" ></i>
-            <i class="fa fa-star-half-o" ></i>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <!-- Call to Action -->
-    <section class="cta">
-      <h1>Enroll for our various Online Courses <br> Anywhere From the World</h1>
-      <a href="" class="hero-btn">CONTACT US</a>
-    </section>
-
     <!-- Footer -->
     <section class="footer">
-      <h4>About us </h4>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda debitis non mollitia aut officiis ullam, <br> vero temporibus ratione blanditiis sint veritatis aliquam omnis autem recusandae eum repellat vel eaque.</p>
+      <h4>About us</h4>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+        assumenda debitis non mollitia aut officiis ullam, <br />
+        vero temporibus ratione blanditiis sint veritatis aliquam omnis autem
+        recusandae eum repellat vel eaque.
+      </p>
       <div class="icons">
         <i class="fa fa-facebook"></i>
         <i class="fa fa-instagram"></i>
         <i class="fa fa-github"></i>
         <i class="fa fa-twitter"></i>
       </div>
-      <h4>Designed By <span>Praveen</span> </h4>
+      <h4>Designed By <span>Praveen</span></h4>
     </section>
     <!-- JS -->
     <script>
